--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -326,8 +326,6 @@ img {
             min-width: 6rem;
             height: 3.125rem;
         }
-        min-width: 11.9375rem;
-        height: 6.25rem;
     }
 }
 .nav-list__item-link {
@@ -429,7 +427,7 @@ img {
     }
 }
 .mob-menu__gray-block {
-    margin-top: 3.5rem;
+    margin-top: 60%;
     height: 3rem;
 }
 .mob-container {
@@ -689,8 +687,8 @@ img {
 
 .hero-title__abs--absolute {
     position: absolute;
-        bottom: 50%;
-        right: 50%;
+        bottom: 56%;
+        left: 50%;
     @include mobile {
         display: none;
     }
@@ -704,7 +702,9 @@ img {
 }
 
 .hero-title__abs--absolute2 {
-
+    position: absolute;
+        bottom: 47%;
+        left: 60%;
     @include mobile {
         display: none;
     }
@@ -1254,8 +1254,7 @@ img {
     @include desktop {
         position: absolute;
         width: 100%;
-        top: 50%;
-        left: 50%;
+        left: 45%;
         transform: translate(-13%, 80%);
         font-size: 4.5rem;
     }
